WIP: added console logs

--- a/example-usage.html
+++ b/example-usage.html
@@ -413,7 +413,7 @@
 	</section>
 
 	<br>
-	<h3>S obrázkem, nadpisem a body /// @todo … dokončit</h3>
+	<h3>S obrázkem, nadpisem a body</h3>
 
 	<section class="two-examples">
 		<div>
@@ -472,7 +472,7 @@
 	</section>
 
 	<br>
-	<h3>Dvě po sobě jdoucí volání funkce… co se asi stane?</h3>
+	<h3>Dvě po sobě jdoucí volání funkce… co se asi stane? /// @todo : rozbité, opravit !!!</h3>
 
 	<section class="two-examples">
 		<div>
