--- a/example-usage.html
+++ b/example-usage.html
@@ -472,7 +472,7 @@
 	</section>
 
 	<br>
-	<h3>Dvě po sobě jdoucí volání funkce… co se asi stane? /// @todo : rozbité, opravit !!!</h3>
+	<h3>Dvě po sobě jdoucí volání funkce… co se asi stane?</h3>
 
 	<section class="two-examples">
 		<div>
