added some jsdoc anotations

--- a/example-usage.html
+++ b/example-usage.html
@@ -1402,6 +1402,8 @@
 		</div>
 	</section>
 
+	/// @todo : bug při zobrazení 2 dialogů z konzole se ten druhý nezobrazí
+
 	/// @todo : vyzkoušet použití root elementu pro dialogy
 
 	/// @todo : přidat mikrodata : https://schema.org/SpecialAnnouncement
